--- a/Practical Test/ML_lab.ipynb
+++ b/Practical Test/ML_lab.ipynb
@@ -6262,15 +6262,6 @@
         "svc_score = svc.score(X_scaled, y)\n",
         "svc_score"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "AoIC_TzDjYnM"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -6278,11 +6269,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.7"
     }
   },
   "nbformat": 4,
